[package]
name = "colorlib-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
colorlib = { path = "../colorlib" }
testsupport = { path = "../testsupport", features = ["with-arbitrary"] }

[[bin]]
name = "parse_hex"
path = "fuzz_targets/parse_hex.rs"
test = false
doc = false
bench = false
